<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    >



    <ImageView
        android:id="@+id/iv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/loginfotor"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="80dp">

    </ImageView>



    <TextView
        android:id="@+id/textViewWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="@dimen/thirty_sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:fontFamily="@font/poppins_semibold"
        app:layout_constraintTop_toBottomOf="@+id/iv"
      app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="@dimen/thirty_two_dp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/textViewSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_sign_cont"
        android:textSize="@dimen/eighteen_sp"
        android:textColor="@color/maintxtgrey"
        android:fontFamily="@font/poppins_medium"
        app:layout_constraintTop_toBottomOf="@id/textViewWelcome"
        android:layout_marginLeft="@dimen/thirty_two_dp"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center"/>


    <LinearLayout
        android:id="@+id/email_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:padding="@dimen/twelve_dp"
        android:background="@drawable/edittext_rounded_background"
        app:layout_constraintTop_toBottomOf="@+id/textViewSignIn"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="match_parent">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/mail"

            android:layout_marginLeft="5dp"
            app:tint="@color/white"></ImageView>
        </LinearLayout>


        <EditText
            android:id="@+id/editEmail"
            android:layout_width="@dimen/zero_dp"
            android:layout_weight="9"
            android:background="@android:color/transparent"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:gravity="center_vertical"
            android:fontFamily="@font/poppins_regular"
            android:textColorHint="@color/white"
            android:layout_marginLeft="10dp"
            android:singleLine="true"
            android:layout_height="wrap_content"
            android:hint="@string/email"



        />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/password_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:padding="@dimen/twelve_dp"
        android:background="@drawable/edittext_rounded_background"
        app:layout_constraintTop_toBottomOf="@+id/email_ll"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/password"

                android:layout_marginLeft="5dp"
                app:tint="@color/white"></ImageView>
        </LinearLayout>


        <EditText
            android:id="@+id/editpasswd"
            android:layout_width="@dimen/zero_dp"
            android:layout_weight="9"
            android:background="@android:color/transparent"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:fontFamily="@font/poppins_regular"
            android:textColorHint="@color/white"
            android:layout_marginLeft="10dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:singleLine="true"


            />
    </LinearLayout>






        <TextView
            android:id="@+id/btnLoginscreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="@dimen/fifteen_sp"
            android:background="@drawable/edittext_rounded_background"
            android:paddingLeft="@dimen/sixty_dp"
            android:paddingRight="@dimen/sixty_dp"
            android:paddingTop="@dimen/twelve_dp"
            android:paddingBottom="@dimen/twelve_dp"
            android:backgroundTint="@color/buttonmain"
            android:textColor="@color/background"
            android:textAllCaps="true"
            android:fontFamily="@font/poppins_semibold"
            app:layout_constraintTop_toBottomOf="@id/password_ll"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/thirty_two_dp"
            />

        <TextView
            android:id="@+id/txtForgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@color/buttonmain"
            android:fontFamily="@font/poppins_semibold"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/btnLoginscreen"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="@dimen/fourty_dp"
            android:gravity="center"/>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
       app:layout_constraintTop_toBottomOf="@+id/txtForgot"

        android:gravity="center_horizontal"
        >
        <TextView
            android:id="@+id/txtregisterNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_now"
            android:textColor="@color/maintxtgrey"
            android:fontFamily="@font/poppins_semibold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="@dimen/fourty_dp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/txtSignUplogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/eight_dp"
            android:text="@string/sign_up"
            android:textStyle="bold"

            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/lightblue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="@dimen/fourty_dp"
            android:gravity="center"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>