<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    android:padding="10dp"
    android:id="@+id/cv_items"
    android:layout_marginTop="15dp"
    android:layout_marginBottom="8dp"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">




    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@drawable/rounded_bg"
        android:backgroundTint="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >



        <TextView
            android:id="@+id/titletv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/title"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/postontv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/poston"
            android:textColor="@color/txtgrey"
            android:textSize="12sp"
            android:layout_marginTop="3dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titletv"></TextView>


        <TextView
            android:id="@+id/updatepostontv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:fontFamily="@font/poppins_regular"
            android:text="2 days ago"
            android:layout_marginTop="3dp"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintLeft_toRightOf="@+id/postontv"
            app:layout_constraintTop_toBottomOf="@+id/titletv"></TextView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginTop="3dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titletv">

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/pin"></ImageView>

            <TextView
                android:id="@+id/locationtv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/location"
                android:textSize="12sp"></TextView>
        </LinearLayout>


        <TextView
            android:id="@+id/payratetv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_bg"
            android:backgroundTint="@color/lightloginBlue"
            android:textColor="@color/loginBlue"
            android:fontFamily="@font/poppins_regular"
            android:textSize="15sp"
            android:text="$16 /Hourly"
            android:paddingRight="5dp"
            android:paddingLeft="5dp"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/postontv"></TextView>


        <TextView
            android:id="@+id/jobtypetv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_bg"
            android:backgroundTint="@color/translightGreen"
            android:textColor="@color/lightGreen"
            android:fontFamily="@font/poppins_regular"
            android:textSize="15sp"
            android:text="Part Time"
            android:paddingRight="5dp"
            android:paddingLeft="5dp"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            app:layout_constraintLeft_toRightOf="@+id/payratetv"
            app:layout_constraintTop_toBottomOf="@+id/postontv"></TextView>



    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.cardview.widget.CardView>